<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.saigopal.swipetest.viewModels.UploadProductViewModel" />
        <variable
            name="click"
            type="com.saigopal.swipetest.UploadProductActivity.Click" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                app:cardCornerRadius="25dp"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_gravity="center"
                android:onClick="@{v->click.back()}"
                android:layout_width="50dp"
                android:layout_height="50dp">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp">
                </ImageView>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/add_new_product"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:gravity="center"
                    android:onClick="@{v->click.pickImage()}"
                    android:id="@+id/upload_img"
                    android:orientation="vertical"
                    android:background="@drawable/dotted_lines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_marginTop="10dp"
                        android:src="@drawable/outline_image_24"
                        android:id="@+id/post_img"
                        android:layout_width="100dp"
                        android:layout_height="100dp">
                    </ImageView>
                    <TextView
                        android:text="@string/upload_image_optional"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/name"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:maxLength="20"
                        android:text="@={viewModel.name}"
                        android:maxLines="2"
                        android:layout_height="match_parent">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/price1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:maxLength="10"
                        android:text="@={viewModel.price}"
                        android:maxLines="1"
                        android:inputType="numberDecimal"
                        android:layout_height="match_parent">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/tax1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:maxLength="6"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.tax}"
                        android:maxLines="1"
                        android:layout_height="match_parent">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:onClick="@{v->click.selectType()}"
                    android:hint="@string/type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:onClick="@{v->click.selectType()}"
                        android:text="@={viewModel.type}"
                        android:layout_height="match_parent">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/post_bt"
                    android:onClick="@{v->click.post()}"
                    android:layout_marginBottom="50dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_margin="15dp"
                        android:layout_height="match_parent">
                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="wrap_content"
                            android:layout_alignParentStart="true"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="0dp"
                            style="@style/Widget.Material3.CardView.Filled"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="40dp"
                                android:src="@drawable/baseline_add_24"
                                android:layout_margin="3dp"
                                android:layout_height="40dp">
                            </ImageView>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:text="@string/post"
                            android:layout_centerInParent="true"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </ScrollView>



    </LinearLayout>
</layout>